--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "next": "15.3.4",
     "openai": "^5.8.2",
     "react": "^19.0.0",
