--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.3.4",
     "openai": "^5.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
