--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "replicate": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
